--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "rwr-players-scraper"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+reqwest-middleware = "0.2.0"
+reqwest-retry = "0.2.1"
 dotenv = "0.15.0"
 num_cpus = "1.15.0"
 rusqlite = { version = "0.28.0", features = ["bundled"] }
